bring for cherish
Signed-off-by: Hưng Phan <phandinhhungvp2001@gmail.com>

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.pixelplusui.updater"
+    package="com.cherish.updater"
     android:versionCode="1">
 
     <uses-permission android:name="android.permission.ACCESS_CACHE_FILESYSTEM" />
@@ -21,7 +21,7 @@
         android:usesCleartextTraffic="false">
 
         <activity
-            android:name="com.pixelplusui.updater.UpdatesActivity"
+            android:name="com.cherish.updater.UpdatesActivity"
             android:excludeFromRecents="true"
             android:label="@string/display_name"
             android:exported="true"
@@ -41,16 +41,16 @@
             </intent-filter>
         </activity>
 
-        <service android:name="com.pixelplusui.updater.controller.UpdaterService" />
-        <service android:name="com.pixelplusui.updater.ExportUpdateService" />
+        <service android:name="com.cherish.updater.controller.UpdaterService" />
+        <service android:name="com.cherish.updater.ExportUpdateService" />
 
-        <receiver android:name="com.pixelplusui.updater.UpdaterReceiver" android:exported="false">
+        <receiver android:name="com.cherish.updater.UpdaterReceiver" android:exported="false">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
             </intent-filter>
         </receiver>
 
-        <receiver android:name="com.pixelplusui.updater.UpdatesCheckReceiver" android:exported="true">
+        <receiver android:name="com.cherish.updater.UpdatesCheckReceiver" android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
             </intent-filter>
